# mav_active_3d_planning

./: .gitignore  README.md  mav_active_3d_planning_https.rosinstall  mav_active_3d_planning_ssh.rosinstall
active_3d_planning_app_reconstruction/: CMakeLists.txt  package.xml
active_3d_planning_app_reconstruction/cfg/experiments/: maze.yaml
active_3d_planning_app_reconstruction/cfg/planners/: maze.yaml
active_3d_planning_app_reconstruction/cfg/planners/esm_cfg/: facility_c.yaml  office_b.yaml  office_c.yaml  platform_a.yaml  pp.yaml  warehouse.yaml
active_3d_planning_app_reconstruction/cfg/planners/esm_map_cfg/: facility_a.yaml  facility_b.yaml  facility_c.yaml  maze.yaml  office_b.yaml  office_c.yaml  platform_a.yaml  platform_b.yaml  pp.yaml  warehouse.yaml
active_3d_planning_app_reconstruction/cfg/planners/esm_recon_cfg/: facility_a.yaml  facility_b.yaml  facility_c.yaml  office_b.yaml  office_c.yaml  platform_a.yaml  platform_b.yaml  pp.yaml
active_3d_planning_app_reconstruction/src/planner/: reconstruction_planner_node.cpp
active_3d_planning_map_core/: CMakeLists.txt  package.xml
active_3d_planning_map_core/include/active_3d_planning_voxblox/initialization/: mapping_package.h
active_3d_planning_map_core/include/active_3d_planning_voxblox/map/: mapping.h
active_3d_planning_map_core/src/initialization/: mapping_package.cpp
active_3d_planning_map_core/src/map/: mapping.cpp
active_3d_planning_ros/: package.xml
active_3d_planning_ros/src/planner/: ros_planner.cpp
mav_active_3d_planning/: package.xml
(+21 files in other folders)
